--- a/style.css
+++ b/style.css
@@ -244,4 +244,28 @@ box-shadow: 0 0 5px  black;
     transition: 0..5s;
     box-shadow: 0 0 5px 0 black;
 }
-
+#message_top{
+    display: inline-block;
+    border: 1px solid green;
+    border-radius:0 12px 12px 12px ;
+    background-color: rgb(26, 138, 26);
+    font-size: 10px;
+    text-align: center ;
+    font-weight: 700;
+    box-shadow: 0 0 10px 0 white;
+    padding: 6px;
+    
+}
+.password-toggle {
+    position: relative;
+}
+.password-toggle input[type="password"] {
+    padding-right: 30px; /* Ajouter de l'espace pour l'icône */
+}
+.password-toggle .toggle-password {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
